--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -151,5 +151,38 @@
   "Novaichain Whitepaper": "Novaichain Whitepaper",
   "Loading": "Loading...",
   "Exchange": "Exchange",
-  "Confirm": "Confirm"
+  "Confirm": "Confirm",
+  "explore.uniswapTVL": "Uniswap TVL",
+  "explore.uniswuniVolumeapTVL": "Uniswap Volume",
+  "explore.unableToDisplayHistorical": "Unable to display historical volume data for the current chain.",
+  "explore.unableToDisplayHistoricalTVL": "Unable to display historical TVL data for the current chain.",
+  "common.tokens": "Tokens",
+  "common.pools": "Pools",
+  "common.transactions": "Transactions",
+  "tokens.table.search.placeholder.pools": "Search pools",
+  "tokens.table.search.placeholder.tokens": "Search tokens",
+  "tokens.table.search.placeholder.transactions": "Search transactions",
+  "common.tokenName": "Token name",
+  "common.price": "Price",
+  "common.volume": "Volume",
+  "common.oneDay": "1 day",
+  "common.oneHour": "1 hour",
+  "common.oneMonth": "1 month",
+  "common.oneWeek": "1 week",
+  "common.oneYear": "1 year",
+  "stats.fdv": "FDV",
+  "common.totalValueLocked": "TVL",
+  "pool.apr": "APR",
+  "pool.volOverTvl": "1D vol/TVL",
+  "stats.volume.1d": "1 day volume",
+  "stats.volume.1d.long": "1D volume",
+  "pool.volume.thirtyDay": "30 day volume",
+  "common.time": "Time",
+  "common.type.label": "Type",
+  "common.tokenAmount": "Token amount",
+  "common.wallet.label": "Wallet",
+  "common.assemble": "assemble",
+  "common.protocol": "Protocol",
+  "common.fees": "费用"
+
 }
