--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -234,5 +234,37 @@
   "Novaichain Introduce": "Novaichain 介绍",
   "Novaichain Whitepaper": "Novaichain 白皮书",
   "Loading": "加载中...",
-  "Exchange": "交换"
+  "Exchange": "交换",
+  "explore.uniswapTVL": "Uniswap TVL",
+  "explore.uniswuniVolumeapTVL": "Uniswap 交易量",
+  "explore.unableToDisplayHistorical": "無法顯示目前鏈的過往記錄交易量資料。",
+  "explore.unableToDisplayHistoricalTVL": "無法顯示目前鏈的過往記錄 TVL 資料。",
+  "common.tokens": "代幣",
+  "common.pools": "資產池",
+  "common.transactions": "交易",
+  "tokens.table.search.placeholder.pools": "搜尋資產池",
+  "tokens.table.search.placeholder.tokens": "搜尋代幣",
+  "tokens.table.search.placeholder.transactions": "Search transactions",
+  "common.tokenName": "代幣名稱",
+  "common.price": "價格",
+  "common.volume": "成交量",
+  "common.oneDay": "1 天",
+  "common.oneHour": "1 小時",
+  "common.oneMonth": "1 個月",
+  "common.oneWeek": "1 星期",
+  "common.oneYear": "1 年",
+  "stats.fdv": "FDV",
+  "common.totalValueLocked": "TVL",
+  "pool.apr": "年利率",
+  "pool.volOverTvl": "1 天成交量/TVL",
+  "stats.volume.1d": "1 天交易量",
+  "stats.volume.1d.long": "1 日交易量",
+  "pool.volume.thirtyDay": "30 天交易量",
+  "common.time": "時間",
+  "common.type.label": "類型",
+  "common.tokenAmount": "代幣數量",
+  "common.wallet.label": "錢包",
+  "common.assemble": " 總",
+  "common.protocol": "协议",
+  "common.fees": "交易費用"
 }
