--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -234,5 +234,38 @@
   "Novaichain Introduce": "Novaichain 介绍",
   "Novaichain Whitepaper": "Novaichain 白皮书",
   "Loading": "加载中...",
-  "Exchange": "交换"
+  "Exchange": "交换",
+  "explore.uniswapTVL": "Uniswap TVL",
+  "explore.uniswuniVolumeapTVL": "Uniswap 交易量",
+  "explore.unableToDisplayHistorical": "无法显示当前区块链的历史交易量数据。",
+  "explore.unableToDisplayHistoricalTVL": "无法显示当前区块链的历史 TVL 数据。",
+  "common.tokens": "代币",
+  "common.pools": "资金池",
+  "common.transactions": "交易",
+  "tokens.table.search.placeholder.pools": "搜索资金池",
+  "tokens.table.search.placeholder.tokens": "搜索代币",
+  "tokens.table.search.placeholder.transactions": "Search transactions",
+  
+  "common.tokenName": "代币名称",
+  "common.price": "价格",
+  "common.volume": "交易量",
+  "common.oneDay": "1 天",
+  "common.oneHour": "1 小时",
+  "common.oneMonth": "1 个月",
+  "common.oneWeek": "1 周",
+  "common.oneYear": "1 年",
+  "stats.fdv": "FDV",
+  "common.totalValueLocked": "TVL",
+  "pool.apr": "年化利率",
+  "pool.volOverTvl": "1 天交易量/TVL",
+  "stats.volume.1d": "1 天交易量",
+  "stats.volume.1d.long": "1 日交易量",
+  "pool.volume.thirtyDay": "30 天交易量",
+  "common.time": "时间",
+  "common.type.label": "类型",
+  "common.tokenAmount": "代币数量",
+  "common.wallet.label": "钱包",
+  "common.assemble": "总",
+  "common.protocol": "協定",
+  "common.fees": "費用"
 }
