--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -266,5 +266,7 @@
   "common.wallet.label": "錢包",
   "common.assemble": " 總",
   "common.protocol": "协议",
-  "common.fees": "交易費用"
+  "common.fees": "交易費用",
+  "bridge": "跨鏈橋",
+  "loading": "加载中..."
 }
